fixed nav 'TWEETER' alignment, replace placeholder with label in new tweet form

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -12,6 +12,8 @@ nav > .component {
 }
 
 nav > span.title {
+  display: flex;
+  align-items: center;
   font-family: "Bungee", sans-serif;
 }
 
