--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -16,6 +16,7 @@
   border-style: none;
   background-color: transparent;
   border-bottom: 5px solid rgb(114, 114, 114);
+  margin-top: 10px;
 }
 
 form > div {
@@ -35,4 +36,9 @@ form > div > button {
 
 form > div > button:hover {
   cursor: pointer;
+}
+
+form > label {
+  font-weight: bold;
+  color:rgba(114, 114, 114, 0.8)
 }
